--- a/demo2/src/demo2.UI.Web/Views/Shared/_Layout.cshtml
+++ b/demo2/src/demo2.UI.Web/Views/Shared/_Layout.cshtml
@@ -28,11 +28,9 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Page1</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Blogs" asp-action="Index">Blogs</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Page2</a>
-                        </li>
+                        
                     </ul>
                 </div>
             </div>
