--- a/demo2/src/demo2.UI.Web/Views/Shared/_Layout.cshtml
+++ b/demo2/src/demo2.UI.Web/Views/Shared/_Layout.cshtml
@@ -30,7 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Blogs" asp-action="Index">Blogs</a>
                         </li>
-                        
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Camera" asp-action="Index">Camera</a>
+                        </li>
                     </ul>
                 </div>
             </div>
